<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="@dimen/dp290"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/verify_account"
        android:textColor="@color/colortext"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edt_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/dp20"
        android:inputType="number"
        android:hint="Input verify code here"
        android:textColor="@color/colortext"
        android:textColorHint="@color/colorhint"
        android:textSize="@dimen/sp18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp31"
            android:layout_marginRight="10dp"
            android:background="@drawable/red_button"
            android:paddingLeft="@dimen/dp21"
            android:paddingRight="@dimen/dp21"
            android:text="@string/dialog_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14"
            android:visibility="visible" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp31"
            android:background="@drawable/light_blue_button"
            android:paddingLeft="@dimen/dp21"
            android:paddingRight="@dimen/dp21"
            android:text="@string/dialog_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14" />

    </LinearLayout>
</LinearLayout>