<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="Forgot Password"
            android:textColor="@color/colortext"
            android:textSize="@dimen/sp25" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:background="#dad8d8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10">

        <EditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/forgot_password_edt"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorhint"
            android:textSize="@dimen/sp20" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tv_send"
            android:layout_marginRight="@dimen/dp70"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/send"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp15" />

    </RelativeLayout>
</LinearLayout>
