<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfirmForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/img_Back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp24"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp12"
            android:background="@drawable/ic_white_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Confirm Forgot Password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp11"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp11"
        android:text="@string/code"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/sp20" />

    <EditText
        android:id="@+id/edt_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp9"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp9"
        android:backgroundTint="@color/light_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp11"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp11"
        android:text="@string/prompt_password"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/sp20" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp9"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp9"
            android:backgroundTint="@color/light_blue"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp11"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp11"
        android:text="@string/prompt_confirm_password"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/sp20" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp9"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp9"
            android:backgroundTint="@color/light_blue"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp9"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp9"
        android:background="#FF0000"
        android:text="Reset Password"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18" />
</LinearLayout>