<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:background="@drawable/signinbg"
        android:scaleType="centerCrop"></FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp150"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/gray"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_avatar"
        android:layout_marginTop="@dimen/dp15"
        android:gravity="center"
        android:text="Your name"
        android:textColor="@color/colortext"
        android:textSize="@dimen/sp30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_full_name"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dp30"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_view_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_user" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp18" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginBottom="@dimen/dp10"
            android:background="#dad8d8" />

        <LinearLayout
            android:id="@+id/ln_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_key" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/change_password"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp18" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginBottom="@dimen/dp10"
            android:background="#dad8d8" />

        <LinearLayout
            android:id="@+id/ln_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_logout" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp5"
                android:gravity="center_vertical"
                android:text="@string/sign_out"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp18" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>